@@ -1,0 +1,37 @@
+# This file is part of pound testsuite. -*- autotest -*-
+# Copyright (C) 2022-2024 Sergey Poznyakoff
+#
+# Pound is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# Pound is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with pound.  If not, see <http://www.gnu.org/licenses/>.
+AT_SETUP([MaxURI])
+AT_KEYWORDS([maxuri])
+
+PT_CHECK([ListenHTTP
+	MaxURI 8
+	Service
+		Backend
+			Address
+			Port
+		End
+	End
+End
+],
+[GET /echo/file
+
+end
+
+414
+end
+])
+
+AT_CLEANUP
