@@ -58,6 +58,7 @@ m4_include([xhttp.at])
 m4_include([checkurl.at])
 m4_include([errfile.at])
 m4_include([maxrequest.at])
+m4_include([maxuri.at])
 m4_include([rewriteloc.at])
 m4_include([nb.at])
 m4_include([chunked.at])
